bug uppdatering + word wrap responsiveness uppdaterad

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 /* förenkla koden för border radius genom att lägga på alla */
 .content-section,
 .image-section,
-.oppettider,
+.oppettider,.main-image,
 .main-wrapper h1 {
     border: 2px solid #111;
 }
@@ -129,5 +129,7 @@ main {
 .image-section {
     display: block;
 }
-
+.main-image {
+    border: none;
+}
 }
